--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -2,3 +2,8 @@
 @use 'base/initial-reset.scss';
 @use 'config/variables.scss';
 @use 'blocks/body.scss';
+@use 'blocks/header.scss';
+@use 'blocks/main.scss';
+@use 'utils/utils.scss';
+@import "bootstrap/scss/bootstrap";
+@import "bootstrap-icons/font/bootstrap-icons.css";
